# Marketing-OS

./: .coveragerc  .flake8  .gitignore  AGENTS.md  Analise-Competitiva-Patricia-Sorrentino.docx  CHANGELOG.md  README.md  Roteiro_Video_Estilo_ALTERD.md  Skill.md  Tabela-Precos-Concorrentes.docx  plugin.json  pyproject.toml  pytest.ini  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
agents/: mos-ads.md  mos-brand.md  mos-copy.md  mos-design.md  mos-funnel.md  mos-infoproduct.md  mos-launch.md  mos-research.md  mos-seo.md  mos-social.md
commands/: analisar-concorrencia.md  analisar-video.md  auditoria.md  batch.md  campanha-autoridade.md  campanha-black-friday.md  campanha-growth.md  campanha-lancamento.md  campanha-prospeccao.md  campanha-retencao.md  campanha.md  capturar-tela.md  clonar-estrategia.md  criar-anuncio.md  criar-artigo.md  criar-brief-design.md  criar-calendario.md  criar-carrossel.md  criar-clone.md  criar-email.md  criar-funil.md  criar-infoproduto.md  criar-landing-page.md  criar-meu-clone.md  criar-podcast.md  criar-post.md  criar-sequencia.md  criar-video.md  criar-webinar.md  gerar-imagem.md  mo.md  projeto.md  publicar-anuncio.md  publicar-notion.md
docs/: APIFY-INTEGRATION.md  ARCHITECTURE.md  AUDITORIA-PRO.md  DISCOVERY.md  GETTING-STARTED.md  ROADMAP.md  SUBAGENTS-EXPANSION-PLAN.md  TROUBLESHOOTING.md  VALIDATION-GUIDE.md  calendario-30-dias-conteudo.md  plano-500k-seguidores.md
landing-pages/: copy-especializei-lab.md  especializei-lab-premium.html  pagina-aplicacao-especializei-lab.html
scripts/: apify_client.py  mos.py  (+24 more)
(+165 files in other folders)
